digiKam 8.0.0 - Release date: 2022-xx-xx

*****************************************************************************************************
NEW FEATURES:

General: Port code to Qt6 and KF6 framework.

*****************************************************************************************************
BUGFIXES:

001 ==> 416704 - Port digiKam to Qt6 and KF6 API.
002 ==> 450153 - All groups deleted by "Extended clean up and shrink all databases".
003 ==> 450518 - Crash when opening Advanced Search.
004 ==> 450467 - digiKam git source build fails.
005 ==> 450642 - Provide an option to open the light table after click on thumbnail.
006 ==> 
007 ==> 
008 ==> 
009 ==> 
010 ==> 