@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
-<gui version="702" name="digikam" translationDomain="digikam" >
+<gui version="800" name="digikam" translationDomain="digikam" >
 
  <MenuBar>
 
@@ -205,6 +205,7 @@
   <Merge />
   <WeakSeparator />
   <Action name="logo_action" />
+  <Action name="hamburger_menu"/>
  </ToolBar>
 
  <MainWindow>
