@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
-<gui version="702" name="imageeditor" translationDomain="digikam" >
+<gui version="800" name="imageeditor" translationDomain="digikam" >
 
 <MenuBar>
 
@@ -169,6 +169,7 @@
      <Merge />
      <WeakSeparator/>
      <Action name="logo_action" />
+     <Action name="hamburger_menu"/>
 </ToolBar>
 
 <ActionProperties/>
