@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
-<gui version="702" name="queuemgrwindow" translationDomain="digikam" >
+<gui version="800" name="queuemgrwindow" translationDomain="digikam" >
 
 <MenuBar>
 
@@ -79,6 +79,7 @@
      <Merge />
      <WeakSeparator/>
      <Action name="logo_action" />
+     <Action name="hamburger_menu"/>
  </ToolBar>
 
 <ActionProperties/>
